--- a/Eindopdracht/Eindopdracht/Eindopdracht/Views/ReviewPage.xaml
+++ b/Eindopdracht/Eindopdracht/Eindopdracht/Views/ReviewPage.xaml
@@ -6,7 +6,7 @@
 
     <ContentPage.Content>
         <StackLayout>
-            <Grid Background="#2296F3" HeightRequest="60">
+            <Grid Background="#2296F3" HeightRequest="80">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="auto"/>
@@ -15,7 +15,7 @@
                  
                 <Image x:Name="imgBack"  Source="" WidthRequest="25" HeightRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
 
-                <Label Grid.Column="1" Text="DetailPage" TextColor="White" FontSize="Title" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Label Grid.Column="1" Text="ReviewPage" HeightRequest="80" TextColor="White" FontSize="Title" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Grid>
             <StackLayout Margin="16">
 
@@ -34,31 +34,45 @@
                 <Image x:Name="imgStar5" Grid.Column="4" Source="star.jpg" WidthRequest="50" HeightRequest="50" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Grid>
                 <Editor x:Name="txtReview" HeightRequest="100" BackgroundColor="Beige" TextColor="Black" PlaceholderColor="Gray" Placeholder="Write your review here"/>
-                <Button x:Name="btnSaveReview" Text="Sent" Background="white" BorderColor="White"/>
+                <Button x:Name="btnSaveReview" Text="Sent" TextColor="Black" FontSize="Medium" Background="white" BorderColor="White" Clicked="btnSaveReview_Clicked"/>
                 <Label Margin=" 0, 16, 0, 0" Text="Reviews:" TextColor="Black" FontSize="Medium"/>
             
-            <ListView x:Name="lsvBooks" RowHeight="210" >
+            <ListView x:Name="lsvReviews" RowHeight="150" BackgroundColor="Beige">
                 <ListView.ItemTemplate >
                     <DataTemplate >
                         <ViewCell>
-                            <StackLayout >
+                                
 
-                                <Grid Padding="8" Background="white" HeightRequest="200">
+                                    <Grid Background="white" Margin="8" HeightRequest="150">
 
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition/>
+                                    <Grid.RowDefinitions >
+                                        <RowDefinition Height="60"/>
+                                         <RowDefinition/>
                                     </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <StackLayout Grid.Column="1" HorizontalOptions="StartAndExpand">
-                                        <Label Text="{Binding Date}" TextColor="Black" FontSize="Medium" HorizontalOptions="Start"/>
-                                        <Label Text="{Binding Text}" FontSize="Small" Margin="8" HeightRequest="60" TextColor="Black" HorizontalOptions="Center"/>
+
+                                    <StackLayout Grid.Row="0" Margin="8" Orientation="Horizontal" HeightRequest="80">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition/>
+                                                </Grid.ColumnDefinitions>
+                                                <Image x:Name="imgStar1" Grid.Column="0" Source="{Binding Star1}" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                                <Image x:Name="imgStar2" Grid.Column="1" Source="{Binding Star2}" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                                <Image x:Name="imgStar3" Grid.Column="2" Source="{Binding Star3}" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                                <Image x:Name="imgStar4" Grid.Column="3" Source="{Binding Star4}" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                                <Image x:Name="imgStar5" Grid.Column="4" Source="{Binding Star5}" WidthRequest="20" HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                            </Grid>
+                                            
+                                        <Label Text="{Binding Date}" FontSize="Micro" HeightRequest="60" TextColor="Black" VerticalTextAlignment="Center" HorizontalOptions="EndAndExpand" />
                                     </StackLayout>
-                                </Grid>
-                                <Rectangle />
-                            </StackLayout>
+                                        <Label Grid.Row="1" Text="{Binding Message}" FontSize="Small" Margin="8"  TextColor="Black"/>
+
+                                    </Grid>
+                                
+                            
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
